# PolyFlo

./: .env.example  .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: install-windows-sdk.ps1  run-dev.ps1  setup-msvc.ps1
src/: App.tsx  overlay-main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/src/: commands.rs  config.rs  events.rs  history.rs  hotkey.rs  lib.rs  main.rs  secrets.rs  session.rs  tray.rs
src-tauri/src/audio/: capture.rs  mod.rs  resample.rs  wav.rs
src-tauri/src/inject/: clipboard.rs  focus.rs  mod.rs  paste.rs  platform.rs
src-tauri/src/stt/: sarvam.rs
src-tauri/src/translate/: mod.rs  sarvam.rs
src/components/: AudioWave.tsx  Overlay.tsx  OverlayLoader.tsx  Settings.tsx  SettingsIcons.tsx  SplitFlap.tsx
src/styles/: settings.css  tokens.css
src/utils/: hotkey.ts  time.ts
