[package]
name = "polyflo"
version = "1.0.2"
description = "Polyflo — minimal push-to-talk dictation powered by Sarvam"
authors = ["Vince"]
edition = "2021"

[lib]
name = "polyflo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
enigo = "0.2"
arboard = "3"
keyring = { version = "3", features = ["windows-native", "apple-native"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2"
